wrapper com crossover

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: #0D1117">
     <div id="text"></div>
 
     <div id="file-input"></div>
